<resources>
    <string name="app_name">Facialth</string>
    <string name="todo">TODO</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="noofinco">Number of Incorrect Password</string>
    <string name="Login" />
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="title_activity_landing_page">LandingPage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_overview">Overview</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_symptoms">Symptoms</string>
    <string name="menu_bug">Report a Bug</string>
    <string name="age">age</string>
    <string name="age1">Age:</string>
    <string name="menu_ver">Ver 1.4β</string>
    <string name="symptoms_head">Choose Your Symptoms:</string>
    <string name="textView4">Name:</string>
    <string name="title">Facialth</string>
    <string name="camera">Scan</string>
    <string name="made">Made by JUETians</string>
</resources>
