<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_overview"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/menu_overview" />
        <item
            android:id="@+id/nav_scan"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/menu_scan" />
        <item
            android:id="@+id/nav_symptoms"
            android:icon="@android:drawable/checkbox_on_background"
            android:title="@string/menu_symptoms" />
        <item
            android:id="@+id/nav_bugs"
            android:icon="@android:drawable/stat_notify_voicemail"
            android:title="@string/menu_bug" />
        <item
            android:id="@+id/nav_version"
            android:checkable="false"
            android:enabled="false"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/menu_ver"
            android:visible="true" />
    </group>

</menu>
